# paimae-integrado

./: .dockerignore  .env.example  .env.test.example  .gitignore  DESIGN.md  Dockerfile  FASE_B_SETUP.md  FASE_C_ORQUESTRACAO.md  FASE_D_LOOP_FEEDBACK.md  FASE_E_FRONTEND_REACT.md  FASE_H_MOBILE.md  FASE_I_INTEGRACIONES.md  FASE_J_GAMIFICACAO.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  check_db.py  inspect_last_users.py  paimae.db  pyproject.toml  start.sh  supabase.py  test_bcrypt.py
backend/alembic/versions/: 202607110001_initial_schema.py  202607130001_pedagogy_module.py  202607130002_add_is_active_to_pedagogy.py  202607140001_learning_integrations_gamification.py  202607140002_study_plans_and_lgpd_fields.py
backend/app/: main.py  migrate_lgpd.py
backend/app/api/: deps.py
backend/app/core/: config.py  security.py  supabase_client.py
backend/app/models/: __init__.py  audit.py  child.py  child_guardian.py  evolution.py  gamification.py  integration.py  learning.py  mixins.py  notification.py  pedagogy.py  routine.py  school.py  task.py  user.py
backend/app/schemas/: ai.py  audit.py  auth.py  child.py  common.py  evolution.py  gamification.py  guardian.py  integration.py  learning.py  notification.py  pedagogy.py  routine.py  school.py  study_plan.py  task.py
backend/app/services/: adaptive_learning.py  ai.py  audit.py  book_processor.py  gamification.py  google_classroom.py  llm.py  ocr.py  (+8 more)
backend/tests/: conftest.py  test_ai_service.py  test_api_auth_scope.py  test_pedagogy.py  test_permissions.py  test_security.py
(+96 files in other folders)
