[project]
name = "paimae-integrado-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "apscheduler>=3.11.0",
  "bcrypt==4.0.1",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "google-cloud-vision>=3.7.0",
  "google-generativeai>=0.8.0",
  "passlib[bcrypt]>=1.7.4",
  "pdf2image>=1.17.0",
  "Pillow>=10.0.0",
  "psycopg[binary]>=3.2.1",
  "pydantic-settings>=2.5.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2,<0.28",
  "pytest>=8.3.3",
  "ruff>=0.6.8"
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
